--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
 		"memory_resource": "cpp",
 		"utility": "cpp",
 		"stop_token": "cpp",
-		"cinttypes": "cpp"
+		"cinttypes": "cpp",
+		"__tree": "cpp",
+		"map": "cpp"
 	}
 }
