--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
 		"stop_token": "cpp",
 		"cinttypes": "cpp",
 		"__tree": "cpp",
-		"map": "cpp"
+		"map": "cpp",
+		"set": "cpp",
+		"unordered_set": "cpp"
 	}
 }
